--- a/codeup-design.html
+++ b/codeup-design.html
@@ -1,10 +1,93 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Codeup Design</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/codeup-design.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Merienda&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Merienda&display=swap'); </style>
 </head>
-<body>
+<body class="bg-light">
 
+<!-- Main page content -->
+
+<div class="page-wrapper">  <!----- page-wrapper start ------->
+
+<!------ Navbar ---------->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><img src="./img/logo.png" height="105px" width="105px">  codeup design</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">SERVICES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">WORK</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">BLOG</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">CONTACT</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+<!-------Header Container ---------->
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12">
+                <h1 class="text-center display-3 my-2 py-2">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+            </div>
+
+            <div class="col-xl-12">
+                <h3 class="text-center display-6 my-3 py-3">FROM PARK CITY, UTAH</h3>
+            </div>
+<!------- Header end --------->
+
+        <div class="big-circle col-xl-12 text-center">
+
+            <div class="big-red">DESIGN</div>
+            <div class="big-red">DESIGN</div>
+            <div class="big-red">DESIGN</div>
+            <div class="big-red">DESIGN</div>
+
+        </div>
+
+
+        </div>
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div> <!----- page-wrapper end ----->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- Your custom JS goes here -->
 </body>
 </html>
