--- a/codeup-design.html
+++ b/codeup-design.html
@@ -10,15 +10,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Merienda&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Abel&family=Anton&family=Merienda&display=swap'); </style>
 </head>
-<body class="bg-light">
+<body>
 
 <!-- Main page content -->
 
 <div class="page-wrapper">  <!----- page-wrapper start ------->
 
-<!------ Navbar ---------->
+    <!------ Navbar ---------->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img src="./img/logo.png" height="105px" width="105px">  codeup design</a>
+        <a class="navbar-brand" href="#"><img src="./img/logo.png" height="50px" width="50px">  codeup design</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,35 +42,74 @@
         </div>
     </nav>
 
-<!-------Header Container ---------->
+    <!-------Header Container ---------->
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
-                <h1 class="text-center display-3 my-2 py-2">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+                <h1 class="text-center display-5 my-2 py-2">VISUAL DESIGN & WEB DEVELOPMENT</h1>
             </div>
 
             <div class="col-xl-12">
-                <h3 class="text-center display-6 my-3 py-3">FROM PARK CITY, UTAH</h3>
+                <h3 class="text-center display-7 my-3 py-3">FROM PARK CITY, UTAH</h3>
             </div>
-<!------- Header end --------->
+            <!------- Header end --------->
 
-        <div class="big-circle col-xl-12 text-center">
+            <div class="big-circles col-xl-12 text-center">
+                <div class="row circle-row">
+                    <div class="big-red col-sm-6">DESIGN</div>
+                    <div class="big-orange col-sm-6">DESIGN</div>
+                </div>
+                <div class="row">
+                    <div class="big-green col-sm-6">DESIGN</div>
+                    <div class="big-blue col-sm-6">DESIGN</div>
+                </div>
+            </div>
+        </div>
+        <hr class="my-5">
+    </div>
 
-            <div class="big-red">DESIGN</div>
-            <div class="big-red">DESIGN</div>
-            <div class="big-red">DESIGN</div>
-            <div class="big-red">DESIGN</div>
+<!-- END FIRST CONTAINER-->
 
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-7 col-lg-7 col-xl-7 selected-work text-center">
+            <p>SELECTED WORK</p>
+
+                <div class="row">
+                <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
+                <img src="./img/apple-ipad.jpg" class="img-fluid max-width:100% height: auto">
+                </div>
+                <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
+                    <img src="./img/macbook.jpg" class="img-fluid max-width:100% height: auto">
+                </div>
+
+
+                <div class="col-12 col-sm-6 col-lg-6 col-xl-6">--3--</div>
+                <div class="col-12 col-sm-6 col-lg-6  col-xl-6">--4--</div>
+                </div>
         </div>
 
 
-        </div>
 
 
+            <div class="col-5 the-last text-center d-none d-md-block">
+                <p>THE LAST</p>
+            </div>
+
+
+
+
+
+
+
+
+
+        <div class="col-xl-5"></div>
 
     </div>
 
 
+</div>
 
 
 
@@ -81,13 +120,10 @@
 
 
 
-
-
-
-
-</div> <!----- page-wrapper end ----->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!-- Your custom JS goes here -->
+</div>
+<!--PAGE WRAPPER END-->
 </body>
 </html>
