feat: compeleted left side content

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -70,43 +70,100 @@
 
 <!-- END FIRST CONTAINER-->
 
-<div class="container">
+<div class="container">  <!----- Main Content Container Start -------->
     <div class="row">
-        <div class="col-12 col-md-7 col-lg-7 col-xl-7 selected-work text-center">
+        <div class="col-12 col-md-7 col-lg-7 col-xl-7 selected-work text-center"> <!----Left Content Start ----->
             <p>SELECTED WORK</p>
 
                 <div class="row">
                 <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
-                <img src="./img/apple-ipad.jpg" class="img-fluid max-width:100% height: auto">
+                <img src="./img/apple-ipad.jpg" class="img-fluid max-width:100% height: auto border border-5">
+                    <div class="small-circle d-flex justify-content-between">
+                        <p class="justify-content-start">FEATURED PROJECT</p>
+                        <ul class="circle-list d-flex">
+                            <li>
+                                <div class="small-red">D</div>
+                            </li>
+                            <li>
+                                <div class="small-orange">D</div>
+                            </li>
+                            <li>
+                                <div class="small-green">S</div>
+                            </li>
+                            <li>
+                                <div class="small-blue">H</div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
-                    <img src="./img/macbook.jpg" class="img-fluid max-width:100% height: auto">
+                    <img src="./img/macbook.jpg" class="img-fluid max-width:100% height: auto border border-5">
+                    <div class="small-circle d-flex justify-content-between">
+                        <p class="justify-content-start">FEATURED PROJECT</p>
+                        <ul class="circle-list d-flex">
+                            <li>
+                                <div class="small-red">D</div>
+                            </li>
+                            <li>
+                                <div class="small-orange">D</div>
+                            </li>
+                            <li>
+                                <div class="small-green">S</div>
+                            </li>
+                            <li>
+                                <div class="small-blue">H</div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-
-
-                <div class="col-12 col-sm-6 col-lg-6 col-xl-6">--3--</div>
-                <div class="col-12 col-sm-6 col-lg-6  col-xl-6">--4--</div>
+                <div class="col-12 col-sm-6 col-lg-6 col-xl-6">
+                    <img src="./img/man.jpg" class="img-fluid max-width:100% height: auto border border-5">
+                    <div class="small-circle d-flex justify-content-between">
+                        <p class="justify-content-start">FEATURED PROJECT</p>
+                        <ul class="circle-list d-flex">
+                            <li>
+                                <div class="small-red">D</div>
+                            </li>
+                            <li>
+                                <div class="small-orange">D</div>
+                            </li>
+                            <li>
+                                <div class="small-green">S</div>
+                            </li>
+                            <li>
+                                <div class="small-blue">H</div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-        </div>
+                <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
+                    <img src="./img/security.jpg" class="img-fluid max-width:100% height: auto border border-5">
+                    <div class="small-circle d-flex justify-content-between">
+                        <p class="justify-content-start">FEATURED PROJECT</p>
+                        <ul class="circle-list d-flex">
+                            <li>
+                                <div class="small-red">D</div>
+                            </li>
+                            <li>
+                                <div class="small-orange">D</div>
+                            </li>
+                            <li>
+                                <div class="small-green">S</div>
+                            </li>
+                            <li>
+                                <div class="small-blue">H</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                </div>
+        </div> <!----Left Content End ----->
 
-
-
-
-            <div class="col-5 the-last text-center d-none d-md-block">
+            <div class="col-5 the-last text-center d-none d-md-block"> <!----Right Content Start------>
                 <p>THE LAST</p>
             </div>
 
-
-
-
-
-
-
-
-
-        <div class="col-xl-5"></div>
-
-    </div>
+    </div> <!------Right Content End----->
 
 
 </div>
