feat: Completed right main container

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -159,11 +159,43 @@
                 </div>
         </div> <!----Left Content End ----->
 
-            <div class="col-5 the-last text-center d-none d-md-block"> <!----Right Content Start------>
+            <div class="col-5 the-last d-none d-md-block"> <!----Right Content Start------>
                 <p>THE LAST</p>
-            </div>
 
-    </div> <!------Right Content End----->
+                <div class="row">
+
+                    <div class="col-5 text-end">
+                        <img src="./img/mobile-phone.jpg" class="mobile-phone border border-3">
+                    </div>
+                    <div class="col-7 text-start">
+                        <h4>THE ADMIN BAR AND ABSOLUTE POSITIONING</h4>
+                    </div>
+
+                    <div class="col-5 text-end">
+                        <img src="./img/head.jpg" class="mobile-phone border border-3">
+                    </div>
+                    <div class="col-7 text-start">
+                        <h4>NIBBLER AWESOME WEBSITE TESTING</h4>
+                    </div>
+
+                    <div class="col-5 text-end">
+                        <img src="./img/ipad.jpg" class="mobile-phone border border-3">
+                    </div>
+                    <div class="col-7 text-start">
+                        <h4>HOW TO GET GOOGLE TO LIKE YOU</h4>
+                    </div>
+                </div>
+
+                <div class="last-tweet col-12">
+                    <p>LAST TWEET</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A enim hic ipsam libero nemo
+                        officiis provident unde velit. Ad architecto autem distinctio eius explicabo illo impedit
+                        minima minus nam saepe.</p>
+                </div>
+
+            </div>  <!------Right Content End----->
+
+    </div> <!----- Main Content Container End -------->
 
 
 </div>
