--- a/codeup-design.html
+++ b/codeup-design.html
@@ -17,8 +17,9 @@
 <div class="page-wrapper">  <!----- page-wrapper start ------->
 
     <!------ Navbar ---------->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img src="./img/logo.png" height="50px" width="50px">  codeup design</a>
+    <nav class="navbar navbar-expand-lg navbar-light text">
+        <a class="navbar-brand d-flex" href="#"><img src="./img/logo.png" height="50px" width="50px"><h5 class="d-none d-sm-block mb-0">codeup design</h5></a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,7 +74,7 @@
 <div class="container">  <!----- Main Content Container Start -------->
     <div class="row">
         <div class="col-12 col-md-7 col-lg-7 col-xl-7 selected-work text-center"> <!----Left Content Start ----->
-            <p>SELECTED WORK</p>
+            <p class="mb-5">SELECTED WORK</p>
 
                 <div class="row">
                 <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
@@ -160,39 +161,41 @@
         </div> <!----Left Content End ----->
 
             <div class="col-5 the-last d-none d-md-block"> <!----Right Content Start------>
-                <p>THE LAST</p>
+                <p class="text-center mb-5">THE LAST</p>
 
-                <div class="row">
+                <div class="row justify-content-end">
 
-                    <div class="col-5 text-end">
+                    <div class="col-3">
                         <img src="./img/mobile-phone.jpg" class="mobile-phone border border-3">
                     </div>
-                    <div class="col-7 text-start">
+                    <div class="col-7">
                         <h4>THE ADMIN BAR AND ABSOLUTE POSITIONING</h4>
                     </div>
-
-                    <div class="col-5 text-end">
+                </div>
+                <div class="row my-5 justify-content-end">
+                    <div class="col-3">
                         <img src="./img/head.jpg" class="mobile-phone border border-3">
                     </div>
-                    <div class="col-7 text-start">
+                    <div class="col-7">
                         <h4>NIBBLER AWESOME WEBSITE TESTING</h4>
                     </div>
-
-                    <div class="col-5 text-end">
+                </div>
+                <div class="row justify-content-end mb-5">
+                    <div class="col-3">
                         <img src="./img/ipad.jpg" class="mobile-phone border border-3">
                     </div>
-                    <div class="col-7 text-start">
+                    <div class="col-7">
                         <h4>HOW TO GET GOOGLE TO LIKE YOU</h4>
                     </div>
                 </div>
-
-                <div class="last-tweet col-12">
+                <div class="row justify-content-end">
+                <div class="last-tweet col-10">
                     <p>LAST TWEET</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A enim hic ipsam libero nemo
                         officiis provident unde velit. Ad architecto autem distinctio eius explicabo illo impedit
                         minima minus nam saepe.</p>
                 </div>
-
+                </div>
             </div>  <!------Right Content End----->
 
     </div> <!----- Main Content Container End -------->
