feat: completed project

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
-                    <img src="./img/security.jpg" class="img-fluid max-width:100% height: auto border border-5">
+                    <img src="./img/security.jpg" class="img-fluid max-width:100% height: auto border border-5 security">
                     <div class="small-circle d-flex justify-content-between">
                         <p class="justify-content-start">FEATURED PROJECT</p>
                         <ul class="circle-list d-flex">
