--- a/codeup-design.html
+++ b/codeup-design.html
@@ -54,15 +54,14 @@
                 <h3 class="text-center display-7 my-3 py-3">FROM PARK CITY, UTAH</h3>
             </div>
             <!------- Header end --------->
+            <!--------BIG CIRCLES  ------->
+            <div class="big-circles">
+                <div class="row circle-row text-center">
+                    <div class="big-red col-sm-6 col-md-3">DESIGN</div>
+                    <div class="big-orange col-sm-6 col-md-3">DEVELOP</div>
 
-            <div class="big-circles col-xl-12 text-center">
-                <div class="row circle-row">
-                    <div class="big-red col-sm-6">DESIGN</div>
-                    <div class="big-orange col-sm-6">DESIGN</div>
-                </div>
-                <div class="row">
-                    <div class="big-green col-sm-6">DESIGN</div>
-                    <div class="big-blue col-sm-6">DESIGN</div>
+                    <div class="big-green col-sm-6 col-md-3">SUPPORT</div>
+                    <div class="big-blue col-sm-6 col-md-3">HOST</div>
                 </div>
             </div>
         </div>
@@ -75,7 +74,7 @@
     <div class="row">
         <div class="col-12 col-md-7 col-lg-7 col-xl-7 selected-work text-center"> <!----Left Content Start ----->
             <p class="mb-5">SELECTED WORK</p>
-
+<!--    FOUR LARGE IMAGES-->
                 <div class="row">
                 <div class="col-12 col-sm-6 col-lg-6  col-xl-6">
                 <img src="./img/apple-ipad.jpg" class="img-fluid max-width:100% height: auto border border-5">
@@ -158,6 +157,7 @@
                     </div>
                 </div>
                 </div>
+            <!--    FOUR LARGE IMAGES-->
         </div> <!----Left Content End ----->
 
             <div class="col-5 the-last d-none d-md-block"> <!----Right Content Start------>
